# imtihon_modul_8

./: .env  Makefile  pyproject.toml
apps/: admin.py  managers.py  serializers.py  urls.py  utils.py  views.py  widgets.py
apps/fixtures/: questions.json
apps/migrations/: 0001_initial.py  0002_answer_option.py
apps/models/: __init__.py  base.py  questions.py  students.py  users.py
root/: settings.py  urls.py
templates/admin/: login.html
